[gd_scene load_steps=38 format=2]

[ext_resource path="res://Assets/title/wand.png" type="Texture" id=1]
[ext_resource path="res://Scripts/end fire.gd" type="Script" id=2]
[ext_resource path="res://Assets/title/w crys.png" type="Texture" id=3]
[ext_resource path="res://Assets/title/g crys.png" type="Texture" id=4]
[ext_resource path="res://Assets/title/f crys.png" type="Texture" id=5]
[ext_resource path="res://Assets/title/volc/3.png" type="Texture" id=6]
[ext_resource path="res://Assets/title/volc/1.png" type="Texture" id=7]
[ext_resource path="res://Assets/title/volc/4.png" type="Texture" id=8]
[ext_resource path="res://Assets/title/volc/2.png" type="Texture" id=9]
[ext_resource path="res://Assets/title/volc/7.png" type="Texture" id=10]
[ext_resource path="res://Assets/title/volc/6.png" type="Texture" id=11]
[ext_resource path="res://Assets/title/volc/0.png" type="Texture" id=12]
[ext_resource path="res://Assets/title/volc/8.png" type="Texture" id=13]
[ext_resource path="res://Assets/title/volc/5.png" type="Texture" id=14]
[ext_resource path="res://Assets/title/box.png" type="Texture" id=15]
[ext_resource path="res://Assets/title/submit.png" type="Texture" id=16]
[ext_resource path="res://Assets/Fblapix-Regular.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://Assets/title/lb.png" type="Texture" id=18]
[ext_resource path="res://addons/silent_wolf/examples/CustomLeaderboards/ReverseLeaderboard.tscn" type="PackedScene" id=19]
[ext_resource path="res://Music/zapsplat_multimedia_game_sound_glissando_bright_bells_fast_win_award_92959.mp3" type="AudioStream" id=20]
[ext_resource path="res://Music/zapsplat_multimedia_game_sound_bright_win_bonus_level_up_92958.mp3" type="AudioStream" id=21]
[ext_resource path="res://Music/music_orlamusic_Epic+003.mp3" type="AudioStream" id=22]
[ext_resource path="res://Music/zapsplat_multimedia_game_sound_fun_magic_game_positive_event_notification_002_61005.mp3" type="AudioStream" id=23]

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("e:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("e:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Label2:percent_visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite2:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite2:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Label2:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Label2:visible_characters")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("w:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 350, 310 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("f:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 577, 85 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("w:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("f:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("ColorRect2:color")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Label2:text")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "New wand acquired!






the ultimate wand!" ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Sprite:modulate")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Sprite:position")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -361.386 ) ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("Sprite/Control:visible")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("fanfare:playing")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("wand:playing")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("bg:volume_db")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -20.0 ]
}
tracks/20/type = "value"
tracks/20/path = NodePath("stone1:playing")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/21/type = "value"
tracks/21/path = NodePath("stone2:playing")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/22/type = "value"
tracks/22/path = NodePath("stone3:playing")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/23/type = "value"
tracks/23/path = NodePath("stone1:volume_db")
tracks/23/interp = 1
tracks/23/loop_wrap = true
tracks/23/imported = false
tracks/23/enabled = true
tracks/23/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -10.0 ]
}
tracks/24/type = "value"
tracks/24/path = NodePath("stone2:volume_db")
tracks/24/interp = 1
tracks/24/loop_wrap = true
tracks/24/imported = false
tracks/24/enabled = true
tracks/24/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -10.0 ]
}
tracks/25/type = "value"
tracks/25/path = NodePath("stone3:volume_db")
tracks/25/interp = 1
tracks/25/loop_wrap = true
tracks/25/imported = false
tracks/25/enabled = true
tracks/25/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -10.0 ]
}
tracks/26/type = "value"
tracks/26/path = NodePath("bg:playing")
tracks/26/interp = 1
tracks/26/loop_wrap = true
tracks/26/imported = false
tracks/26/enabled = true
tracks/26/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
resource_name = "create"
length = 3.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("e:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.6 ),
"transitions": PoolRealArray( 4.14105, 1 ),
"update": 0,
"values": [ Vector2( 81, 86 ), Vector2( 342, 192 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("w:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.8 ),
"transitions": PoolRealArray( 6.72717, 1 ),
"update": 0,
"values": [ Vector2( 341, 310 ), Vector2( 341, 192 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("f:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 8.28211, 1 ),
"update": 0,
"values": [ Vector2( 577, 85 ), Vector2( 341, 192 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("e:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("w:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("f:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ColorRect2:color")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 17.7531, 1 ),
"update": 0,
"values": [ Color( 0.207843, 0.207843, 0.207843, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite2:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Label2:percent_visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("AnimatedSprite:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("bg:volume_db")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -20.0 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("bg:playing")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = false
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("stone1:playing")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 2.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("stone2:playing")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 2.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("stone3:playing")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 2.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("stone1:volume_db")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 2.25, 2.6, 3.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -20.0, -20.0, -50.0 ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("stone2:volume_db")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 2.55, 2.8, 4.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -20.0, -20.0, -50.0 ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("stone3:volume_db")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 2.6, 3.15, 4.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -20.0, -20.0, -50.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "wand"
length = 15.0
tracks/0/type = "value"
tracks/0/path = NodePath("Label2:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.6, 0.8, 3.5, 3.7, 4.06003, 4.3, 7, 7.1, 7.2, 7.5, 9.55, 9.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 1.0, 0.0, 0.0, 1.0, 1.0, 0.0, 0.0, 1.0, 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 3.5, 3.7 ),
"transitions": PoolRealArray( 4.14106, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0.207843, 0.207843, 0.207843, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect2:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Label2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimatedSprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 3.25, 3.7, 4.5, 14.4 ),
"transitions": PoolRealArray( 1, 0.466516, 9.51365, 1 ),
"update": 0,
"values": [ Vector2( 0, -816 ), Vector2( 0, -816 ), Vector2( 0, -400 ), Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AnimatedSprite:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 3.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("AnimatedSprite:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 9.85 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("AnimatedSprite:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 3.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Label2:text")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 3.75, 7.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "New wand acquired!






the ultimate wand!", "Now, let's do what we came here for!", "you used the ultimate wand and stopped the volcano!" ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Sprite:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 9.85, 12.6 ),
"transitions": PoolRealArray( 3.36358, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Sprite:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 4.5, 14.4 ),
"transitions": PoolRealArray( 9.51365, 1 ),
"update": 0,
"values": [ Vector2( 0, -400 ), Vector2( 0, 0 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Sprite/Control:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("fanfare:playing")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0.1, 10.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("wand:playing")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("bg:playing")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 2.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("bg:volume_db")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 2.2, 3.6, 13 ),
"transitions": PoolRealArray( 1, 4.43828, 1 ),
"update": 0,
"values": [ -50.0, -20.0, -50.0 ]
}

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 7 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 10 ) ],
"loop": false,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/Fblapix-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 25
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://Assets/Fblapix-Regular.ttf"

[sub_resource type="DynamicFont" id=10]
size = 23
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 9 )

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="DynamicFont" id=12]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 17 )

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="DynamicFontData" id=14]
font_path = "res://Assets/Fblapix-Regular.ttf"

[sub_resource type="DynamicFont" id=15]
size = 35
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 14 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -19.0
margin_top = -17.0
margin_right = 703.0
margin_bottom = 407.0
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/create = SubResource( 7 )
anims/wand = SubResource( 5 )

[node name="e" type="Sprite" parent="."]
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 4 )

[node name="w" type="Sprite" parent="."]
position = Vector2( 350, 310 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 3 )

[node name="f" type="Sprite" parent="."]
position = Vector2( 577, 85 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 5 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = -19.0
margin_top = -17.0
margin_right = 703.0
margin_bottom = 407.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -396.588 )
frames = SubResource( 8 )
frame = 13
playing = true
centered = false

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -361.386 )
texture = ExtResource( 13 )
centered = false

[node name="Control" type="Control" parent="Sprite"]
visible = false
margin_top = 0.516541
margin_right = 682.0
margin_bottom = 385.517

[node name="TextureRect" type="TextureRect" parent="Sprite/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -238.0
margin_top = -166.017
margin_right = 191.0
margin_bottom = 129.983
rect_scale = Vector2( 1.11218, 1.11218 )
texture = ExtResource( 15 )
expand = true

[node name="Label3" type="Label" parent="Sprite/Control/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 29.0
margin_top = 25.0
margin_right = -29.0
margin_bottom = -101.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Congrats on beating the game! Enter your name to upload your score!"
align = 1
autowrap = true

[node name="LineEdit" type="LineEdit" parent="Sprite/Control/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -129.0
margin_top = -16.5
margin_right = 129.0
margin_bottom = 24.5
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 10 )
custom_styles/focus = SubResource( 16 )
custom_styles/normal = SubResource( 11 )
align = 1
max_length = 10
placeholder_text = "your name here"

[node name="submit" type="Button" parent="Sprite/Control/TextureRect"]
anchor_left = 0.681
anchor_top = 0.725
anchor_right = 0.684
anchor_bottom = 0.725
margin_left = -15.149
margin_top = -45.6
margin_right = 121.564
margin_bottom = 8.39999
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
text = "submit"
icon = ExtResource( 16 )
flat = true
icon_align = 1
expand_icon = true

[node name="title" type="Button" parent="Sprite/Control/TextureRect"]
anchor_left = 0.681
anchor_top = 0.725
anchor_right = 0.684
anchor_bottom = 0.725
margin_left = -15.149
margin_top = 6.39999
margin_right = 121.564
margin_bottom = 60.4
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
text = "home"
icon = ExtResource( 16 )
flat = true
icon_align = 1
expand_icon = true

[node name="leaderboard" type="Button" parent="Sprite/Control/TextureRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -195.0
margin_top = -105.189
margin_right = 73.0
margin_bottom = -42.1894
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
text = "view leaderboard"
icon = ExtResource( 18 )
flat = true
icon_align = 1
expand_icon = true

[node name="ReverseLeaderboard" parent="Sprite" instance=ExtResource( 19 )]
visible = false

[node name="Sprite2" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 343, 192 )
scale = Vector2( 4.27003, 4.27003 )
texture = ExtResource( 1 )

[node name="Label2" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 54.0
margin_right = 623.0
margin_bottom = 385.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 15 )
text = "New wand acquired!






the ultimate wand!"
align = 1
valign = 1
autowrap = true
percent_visible = 0.0

[node name="fanfare" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
volume_db = -10.0

[node name="wand" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
volume_db = -15.0

[node name="stone1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
volume_db = -10.0

[node name="stone2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
volume_db = -10.0

[node name="stone3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
volume_db = -10.0

[node name="bg" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
volume_db = -20.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="Sprite/Control/TextureRect/submit" to="." method="_on_submit_pressed"]
[connection signal="pressed" from="Sprite/Control/TextureRect/title" to="." method="_on_title_pressed"]
[connection signal="pressed" from="Sprite/Control/TextureRect/leaderboard" to="." method="_on_leaderboard_pressed"]
